[Feature] 调整配置