@@ -1,23 +1,27 @@
--server
 -Xms2G
 -Xmx2G
+-server
 -XX:MaxPermSize=512m 
--XX:ReservedCodeCacheSize=256m
+-XX:ReservedCodeCacheSize=240m
+-XX:+UseCompressedOops
+-Dfile.encoding=UTF-8
+-XX:+UseConcMarkSweepGC
+-XX:SoftRefLRUPolicyMSPerMB=50
+-ea
+-Dsun.io.useCanonCaches=false
+-Djava.net.preferIPv4Stack=true
+-XX:+HeapDumpOnOutOfMemoryError
+-XX:-OmitStackTraceInFastThrow
+-Xverify:none
 -XX:NewRatio=3
 -Xss16m
 -XX:+UseCodeCacheFlushing
--XX:+UseConcMarkSweepGC
 -XX:+CMSParallelRemarkEnabled
 -XX:ConcGCThreads=4
 -XX:+AlwaysPreTouch
 -XX:+TieredCompilation
--XX:+UseCompressedOops
--XX:SoftRefLRUPolicyMSPerMB=50
--Dsun.io.useCanonCaches=false
--Djava.net.preferIPv4Stack=true
 -Djsse.enableSNIExtension=false
--ea
--Dide.no.platform.update=false
--XX:CMSInitiatingOccupancyFraction=60
--Dsun.awt.keepWorkingSetOnMinimize=true 
--Djava.awt.im.style=on-the-spot 
+
+-XX:ErrorFile=$USER_HOME/java_error_in_idea_%p.log
+-XX:HeapDumpPath=$USER_HOME/java_error_in_idea.hprof
+-Xbootclasspath/a:../lib/boot.jar
